<?xml version="1.0"?>
<package format="2">
  <name>freeture_matcher</name>
  <version>0.0.1</version>
  <description>Freetures matcher</description>

  <maintainer email="xiangyu002@e.ntu.edu.sg">Mike Xiangyu Liu</maintainer>

  <author>Mike Xiangyu Liu</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <buildtool_depend>catkin_simple</buildtool_depend>

  <depend>roscpp</depend>
  <depend>voxblox</depend>

</package>
